--- a/pom.xml
+++ b/pom.xml
@@ -106,9 +106,11 @@
 			<version>0.12.6</version>
 			<scope>runtime</scope>
 		</dependency>
-
-
-
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-envers</artifactId>
+			<version>3.4.5</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
